Fixed dark mode

--- a/Senior-Project/src/app/components/layout-card/layout-card.component.scss
+++ b/Senior-Project/src/app/components/layout-card/layout-card.component.scss
@@ -5,6 +5,10 @@
   align-items: center;
 }
 
+.layout-card-dark {
+  background-color: gray;
+}
+
 .inner-layout {
   padding: 10px;
   display: flex;
